--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "chellem/youtube-downloader",
+    "name": "Elbandi/Youtube-dl-php",
     "description": "PHP library to download video",
     "keywords": ["youtube", "download"],
     "type": "library",
